# SpaceCowboy-Compliance

./: .env.example  .gitignore  .pre-commit-config.yaml  KNOWN_IMPROVEMENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 08ff9bc547a3_enable_pgvector_extension.py  e201dec3ffad_create_initial_tables.py
apps/api/: config.py  logging_config.py  main.py  security.py
apps/api/routes/: agents.py  gaps.py  health.py  kb.py  retrieve.py
apps/web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AnalysisProgress.tsx  AnalysisReport.tsx  ConfidenceBar.tsx  CorpusGaps.tsx  ProtocolInput.tsx
apps/web/src/lib/: api.ts
scripts/: agent_search.py  fetch_and_ingest.py  hardware_agent.py  ingest_corpus.py  ingest_pdf.py  microgravity_agent.py  mission_agent.py  orchestrate.py  regulatory_agent.py  retrieve.py  run_evals.py  safety_agent.py
tests/: conftest.py  test_evals.py  test_health.py  test_ingestion.py  test_knowledge_base.py  test_microgravity_agent.py  test_mission_agent.py  test_models.py  test_orchestrator.py  test_regulatory_agent.py  test_retrieval.py  test_safety_agent.py
