[project]
name = "spacebio-translator"
version = "0.1.0"
description = "AI-assisted translation of biotech experiments for ISS deployment"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # DB
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3",
    "alembic>=1.13",
    # LLM / Embeddings
    "anthropic>=0.40",
    "voyageai>=0.3",
    "cohere>=5.11",
    # Ingestion
    "unstructured[pdf]>=0.15",
    "pypdf>=4.3",
    # Observability
    "structlog>=24.4",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "ipython>=8.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["apps", "packages"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov-report=term-missing"
markers = [
    "slow: marks tests as slow",
    "evals: marks tests as eval suite (run separately)",
    "integration: requires external services",
]
testpaths = ["packages", "apps", "tests"]
